--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2Ex7BOdhDO5vKxDBjF8ts",
+      "authorship_tag": "ABX9TyNeaNOmspjVFqi3ABUxTiHP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1939,13 +1939,37 @@
       ]
     },
     {
+      "source": [
+        "#模型評模型評價\n",
+        "from sklearn.metrics import mean_squared_error, mean_absolute_error # Import necessary functions\n",
+        "\n",
+        "mse=mean_squared_error(real_price,predicted_price)\n",
+        "print('MSE(均方誤差)=', mse)\n",
+        "rmse=np.sqrt(mse)\n",
+        "print('MSE(均方根誤差)=', rmse)\n",
+        "mae=mean_absolute_error(real_price,predicted_price)\n",
+        "print('MSE(平均絕對誤差)=', mae)"
+      ],
       "cell_type": "code",
-      "source": [],
       "metadata": {
-        "id": "fLizS0Uio3I4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2kJgfzTGFaE7",
+        "outputId": "02848342-82b7-459b-af87-61d25ba46fc4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE(均方誤差)= 1669.9096018881783\n",
+            "MSE(均方根誤差)= 40.86452742768694\n",
+            "MSE(平均絕對誤差)= 31.753707725123352\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
